<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ufld_lane_detection</name>
  <version>0.0.1</version>
  <description>lane_detection_node for Abaja</description>
  <maintainer email="jztshadow0@gmail.com">shadow0</maintainer>
  <license>Apache-2.0</license>

  <!-- Build and Runtime Dependencies -->
  <build_depend>ament_cmake</build_depend>
  <build_depend>ament_python</build_depend>
  <build_depend>rclpy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>torch</build_depend>
  <build_depend>numpy</build_depend>
  <build_depend>opencv-python</build_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>torch</exec_depend>
  <exec_depend>numpy</exec_depend>
  <exec_depend>opencv-python</exec_depend>

  <!-- Testing Dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
